--- a/index.html
+++ b/index.html
@@ -1,15 +1,31 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<title>Frequencies</title>
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 	<script src="frequency.js" type="text/javascript" charset="utf-8"></script>
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 	<div>
-		<textarea id='phonemes' rows='20' cols='100'>
-
-		</textarea>
+		<textarea id='phonemes' rows='20' cols='100'
+			placeholder='Paste text here'></textarea>
 	</div>
+	<div>
+		<p>Votre Texte</p>
+		<p id='text'></p>
+	</div>
+	<table id='freqtable'>
+		<tbody>
+			<tr>
+				<th>Phonème</th>
+				<th>Compte</th>
+				<th>% Juilland</th>
+				<th>Votre %</th>
+				<th>Difference</th>
+			</tr>
+		</tbody>
+	</table>
 </body>
 </html>
