More style for table

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	</div>
 	<table id='freqtable'>
 		<tbody>
-			<tr>
+			<tr class='title'>
 				<th>Phonème</th>
 				<th>Compte</th>
 				<th>% Juilland</th>
