Added description and better highlighting

--- a/index.html
+++ b/index.html
@@ -11,11 +11,30 @@
 <body>
 	<div>
 		<p id='title' class='title'>Analyse de Phonèmes</p>
+		<p id='description'>
+			Ceci est un outil crée pour analyser les textes en éxaminant les
+			differents sons utilisés par l'auteur. Pour l'utiliser, vous devez
+			déjà en avoir la traduction phonetique de votre texte. On peut faire
+			la traduction on phonèmes sur de divers sites, comme
+			<a href='http://easypronunciation.com/fr/french-phonetic-transcription-converter'>
+				celui la</a>. Àpres avoir copier les phonènes, collez-les dans
+			la casse en bas. A droit apparaitra une tableau indiquant la nombre
+			de fois que chaque phonème a été trouvé dans le texte et aussi la
+			pourcentage de ce phonème dans le texte entier. On trouve aussi la
+			pourcentage de chaque phonème dans une texte français "typique." Ces
+			pourcentages pour une text "typique" sont du a Juilland, Alphonse
+			(1963) dans la <span class='ital'>Dictionnaire inverse de la langue
+			française</span>. On peut cliquer sur la liste de phonèmes pour voir
+			ou ils se situent dans le texte.
+			<br /><br />
+			Ce project a été crée par Jay Taves, pour la cours a Cornell de
+			Français 3120.
+			</p>
 	</div>
 	<div id='left'>
 		<div>
 			<textarea id='phonemes' rows='20' cols='100'
-				placeholder='Paste text here'></textarea>
+				placeholder='Coller les phonèmes içi'></textarea>
 		</div>
 		<div id='copiedtext'>
 			<p class='title'>Votre Texte</p>
