--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-	<div>
-		<p id='title' class='title'>Analyse de Phonèmes</p>
+	<div id='top'>
+		<p id='title'>Analyse de Phonèmes</p>
 		<p id='description'>
 			Ceci est un outil crée pour analyser les textes en éxaminant les
 			differents sons utilisés par l'auteur. Pour l'utiliser, vous devez
@@ -32,6 +32,10 @@
 			</p>
 	</div>
 	<div id='left'>
+		Examples:
+		<input id='zola' type='button' value='Zola' />
+		<input id='ponge' type='button' value='Ponge' />
+		<br /><br />
 		<div>
 			<textarea id='phonemes' rows='20' cols='100'
 				placeholder='Coller les phonèmes içi'></textarea>
